[gd_scene load_steps=30 format=2]

[ext_resource path="res://images/Rock.jpeg" type="Texture" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://images/Ice.png" type="Texture" id=3]
[ext_resource path="res://images/Clouds2.png" type="Texture" id=4]
[ext_resource path="res://Level.gd" type="Script" id=5]
[ext_resource path="res://music/A_Day_of_Work_Full_of_Luck_Long_Version_-_AuthorMusic.mp3" type="AudioStream" id=6]
[ext_resource path="res://fonts/largecomic.tres" type="DynamicFont" id=7]
[ext_resource path="res://images/LavaRock.png" type="Texture" id=8]
[ext_resource path="res://images/IcyRock.png" type="Texture" id=9]
[ext_resource path="res://fonts/scorecomic.tres" type="DynamicFont" id=10]
[ext_resource path="res://images/sound.png" type="Texture" id=11]
[ext_resource path="res://MuteButton.gd" type="Script" id=12]

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="TileSet" id=2]
0/name = "Rock"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = true
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Ice"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 4 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "IcyRock"
2/texture = ExtResource( 9 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 128, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 11 )
2/shape_one_way = true
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "LavaRock"
3/texture = ExtResource( 8 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 10 )
3/shape_one_way = true
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[sub_resource type="Theme" id=8]

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.666667, 0.733333, 0.929412, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="Theme" id=5]
default_font = ExtResource( 7 )

[sub_resource type="Theme" id=6]
default_font = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=7]
content_margin_bottom = 11.0
bg_color = Color( 0.321569, 0.67451, 0.815686, 0.909804 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0117647, 0, 0.172549, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="ShortCut" id=17]

[sub_resource type="StyleBoxFlat" id=14]
content_margin_bottom = 11.0
bg_color = Color( 0.443137, 0.435294, 0.596078, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0117647, 0, 0.172549, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="InputEventAction" id=23]
action = "quit"

[sub_resource type="ShortCut" id=19]
shortcut = SubResource( 23 )

[sub_resource type="Theme" id=20]
default_font = ExtResource( 10 )

[sub_resource type="InputEventAction" id=21]
action = "quit"

[sub_resource type="ShortCut" id=22]
shortcut = SubResource( 21 )

[node name="Level" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -32.0 ]
}

[node name="Background" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 1, 0.5 )
motion_mirroring = Vector2( 0, 960 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxLayer"]
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 960, 960 )

[node name="Tween" type="Tween" parent="Background/ParallaxLayer/Sprite"]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 168, -32 )

[node name="Walls" type="StaticBody2D" parent="."]

[node name="TileMap" type="TileMap" parent="Walls"]
scale = Vector2( 0.25, 0.25 )
tile_set = SubResource( 2 )
cell_size = Vector2( 128, 128 )
collision_use_parent = true
format = 1
tile_data = PoolIntArray( -655360, 1, 0, -589824, 1, 0, -524288, 1, 0, -458752, 1, 0, -393216, 1, 0, -327680, 1, 0, -262144, 1, 0, -196608, 1, 0, -131072, 1, 0, -65536, 1, 0, -65507, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 65556, 1, 0, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 65560, 1, 0, 65561, 1, 0, 65562, 1, 0, 65563, 1, 0, 65564, 1, 0, 65565, 1, 0, 131072, 1, 0, 131101, 1, 0, 196608, 1, 0, 196637, 1, 0, 262144, 1, 0, 262173, 1, 0, 327680, 1, 0, 327709, 1, 0, 393216, 1, 0, 393245, 1, 0, 458752, 1, 0, 458781, 1, 0, 524288, 1, 0, 524317, 1, 0, 589824, 1, 0, 589853, 1, 0, 655360, 1, 0, 655389, 1, 0, 720896, 1, 0, 720925, 1, 0, 786432, 1, 0, 786461, 1, 0, 851968, 1, 0, 851997, 1, 0, 917504, 1, 0, 917533, 1, 0, 983040, 1, 0, 983069, 1, 0, 1048576, 1, 0, 1048605, 1, 0, 1114112, 1, 0, 1114141, 1, 0, 1179648, 1, 0, 1179649, 1, 0, 1179650, 1, 0, 1179651, 1, 0, 1179652, 1, 0, 1179653, 1, 0, 1179654, 1, 0, 1179655, 1, 0, 1179656, 1, 0, 1179657, 1, 0, 1179658, 1, 0, 1179659, 1, 0, 1179660, 1, 0, 1179661, 1, 0, 1179662, 1, 0, 1179663, 1, 0, 1179664, 1, 0, 1179665, 1, 0, 1179666, 1, 0, 1179667, 1, 0, 1179668, 1, 0, 1179669, 1, 0, 1179670, 1, 0, 1179671, 1, 0, 1179672, 1, 0, 1179673, 1, 0, 1179674, 1, 0, 1179675, 1, 0, 1179676, 1, 0, 1179677, 1, 0 )

[node name="Platforms" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="TileMap" type="TileMap" parent="Platforms"]
scale = Vector2( 0.25, 0.25 )
tile_set = SubResource( 2 )
cell_size = Vector2( 128, 128 )
collision_use_parent = true
format = 1
tile_data = PoolIntArray( 1048578, 3, 0, 1048579, 3, 0, 1048580, 3, 0, 1048581, 3, 0, 1048582, 3, 0, 1048583, 3, 0, 1048584, 3, 0, 1048585, 3, 0, 1048586, 3, 0, 1048587, 3, 0, 1048588, 3, 0, 1048589, 3, 0, 1048590, 3, 0, 1048591, 3, 0, 1048592, 3, 0, 1048593, 3, 0, 1048594, 3, 0, 1048595, 3, 0, 1048596, 3, 0, 1048597, 3, 0, 1048598, 3, 0, 1048599, 3, 0, 1048600, 3, 0, 1048601, 3, 0, 1048602, 3, 0, 1114114, 2, 0, 1114115, 2, 0, 1114116, 2, 0, 1114117, 2, 0, 1114118, 2, 0, 1114119, 2, 0, 1114120, 2, 0, 1114121, 2, 0, 1114122, 2, 0, 1114123, 2, 0, 1114124, 2, 0, 1114125, 2, 0, 1114126, 2, 0, 1114127, 2, 0, 1114128, 2, 0, 1114129, 2, 0, 1114130, 2, 0, 1114131, 2, 0, 1114132, 2, 0, 1114133, 2, 0, 1114134, 2, 0, 1114135, 2, 0, 1114136, 2, 0, 1114137, 2, 0, 1114138, 2, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0 )

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 6 )
autoplay = true

[node name="Menus" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="GameOver" type="Control" parent="Menus"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="BackPanel" type="Panel" parent="Menus/GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 140.0
margin_top = 139.0
margin_right = 780.0
margin_bottom = 779.0
theme = SubResource( 8 )
custom_styles/panel = SubResource( 15 )

[node name="YouDiedLabel" type="Label" parent="Menus/GameOver"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 260.0
margin_top = 183.0
margin_right = 660.0
margin_bottom = 433.5
theme = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Wipe out!"
align = 1

[node name="ScoreLabel" type="Label" parent="Menus/GameOver"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 160.0
margin_top = 283.0
margin_right = 760.0
margin_bottom = 384.0
rect_pivot_offset = Vector2( 310, -260 )
theme = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Score: 10000000"
align = 1

[node name="RetryButton" type="Button" parent="Menus/GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 260.0
margin_top = 526.0
margin_right = 660.0
margin_bottom = 639.0
focus_neighbour_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
theme = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 7 )
shortcut_in_tooltip = false
shortcut = SubResource( 17 )
text = "Try again?"

[node name="QuitButton" type="Button" parent="Menus/GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 324.0
margin_top = 647.0
margin_right = 724.0
margin_bottom = 760.0
rect_scale = Vector2( 0.68, 0.68 )
focus_neighbour_top = NodePath("../RetryButton")
focus_neighbour_bottom = NodePath("../MuteButton")
focus_next = NodePath("../MuteButton")
focus_previous = NodePath("../RetryButton")
theme = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 14 )
shortcut_in_tooltip = false
shortcut = SubResource( 19 )
text = "Quit"

[node name="StatsLabel" type="Label" parent="Menus/GameOver"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 159.0
margin_top = 389.0
margin_right = 759.0
margin_bottom = 484.0
theme = SubResource( 20 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Highest Floor: 80
Highest Combo: 80"
align = 1

[node name="MuteButton" type="TextureButton" parent="Menus/GameOver"]
margin_left = 719.0
margin_top = 723.0
margin_right = 783.0
margin_bottom = 787.0
focus_neighbour_top = NodePath("../QuitButton")
texture_normal = ExtResource( 11 )
script = ExtResource( 12 )

[node name="Pause" type="Control" parent="Menus"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="BackPanel" type="Panel" parent="Menus/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 140.0
margin_top = 139.0
margin_right = 780.0
margin_bottom = 779.0
theme = SubResource( 8 )
custom_styles/panel = SubResource( 15 )

[node name="Label" type="Label" parent="Menus/Pause"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 260.0
margin_top = 183.0
margin_right = 660.0
margin_bottom = 433.5
theme = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "PAUSE"
align = 1

[node name="ScoreLabel" type="Label" parent="Menus/Pause"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 160.0
margin_top = 283.0
margin_right = 760.0
margin_bottom = 384.0
rect_pivot_offset = Vector2( 310, -260 )
theme = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Score: 10000000"
align = 1

[node name="ResumeButton" type="Button" parent="Menus/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 260.0
margin_top = 440.0
margin_right = 660.0
margin_bottom = 553.0
focus_neighbour_bottom = NodePath("../RestartButton")
focus_next = NodePath("../RestartButton")
theme = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 7 )
shortcut_in_tooltip = false
shortcut = SubResource( 17 )
text = "Resume"

[node name="QuitButton" type="Button" parent="Menus/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 324.0
margin_top = 652.0
margin_right = 724.0
margin_bottom = 765.0
rect_scale = Vector2( 0.68, 0.68 )
focus_neighbour_top = NodePath("../RestartButton")
focus_neighbour_bottom = NodePath("../MuteButton")
focus_next = NodePath("../MuteButton")
focus_previous = NodePath("../RestartButton")
theme = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 14 )
shortcut_in_tooltip = false
shortcut = SubResource( 22 )
text = "Quit"

[node name="RestartButton" type="Button" parent="Menus/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 324.0
margin_top = 563.0
margin_right = 724.0
margin_bottom = 676.0
rect_scale = Vector2( 0.68, 0.68 )
focus_neighbour_top = NodePath("../ResumeButton")
focus_neighbour_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../ResumeButton")
theme = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 14 )
shortcut_in_tooltip = false
text = "Restart"

[node name="MuteButton" type="TextureButton" parent="Menus/Pause"]
margin_left = 719.0
margin_top = 723.0
margin_right = 783.0
margin_bottom = 787.0
focus_neighbour_top = NodePath("../QuitButton")
focus_previous = NodePath("../QuitButton")
texture_normal = ExtResource( 11 )
script = ExtResource( 12 )

[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="new_zone" from="Player" to="." method="_on_Player_new_zone"]
[connection signal="pressed" from="Menus/GameOver/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="Menus/GameOver/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Menus/GameOver/MuteButton" to="Menus/GameOver/MuteButton" method="_on_MuteButton_pressed"]
[connection signal="pressed" from="Menus/Pause/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Menus/Pause/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Menus/Pause/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Menus/Pause/MuteButton" to="Menus/Pause/MuteButton" method="_on_MuteButton_pressed"]
